elasticsearch/_kube/master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-master
  namespace: devops
  labels:
    component: es
    role: master
spec:
  replicas: 1 #3
  serviceName: "es-master-ss"
  selector:
    matchLabels:
      component: es
  #------------------------------------
  #NOTE:
  #------------------------------------
  #podManagementPolicy: "Parallel"
  template:
    metadata:
      labels:
        component: es
        role: master
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: es-master
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        image: elasticsearch:7.4.2
#        imagePullPolicy: Always
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
#        - name: data-volume
#          mountPath: /var/lib/es
#        - name: log-volume
#          mountPath: /var/log/es
        - name: es-config-volume
          mountPath: /usr/share/es/config/es.yml
          subPath: es.yml
        - name: es-config-volume
          mountPath: /usr/share/es/config/log4j2.properties
          subPath: log4j2.properties
#        resources:
#          requests:
#            cpu: 2000m
#            memory: 8Gi
#          limits:
#            cpu: 4000m
#            memory: 8Gi
        readinessProbe:
          tcpSocket:
            port: 9300
          timeoutSeconds: 1
          successThreshold: 1
        livenessProbe:
          tcpSocket:
            port: 9300
          periodSeconds: 60
          timeoutSeconds: 1
          successThreshold: 1
      volumes:
      - name: log-volume
        emptyDir: {}
      - name: es-config-volume
        configMap:
          name: es-config
